foo-corp/namespaces/dev/webserver-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx-dev
  name: nginx-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-dev
  strategy: {}
  template:
    metadata:
      labels:
        run: nginx-dev
    spec:
      containers:
      - image: nginx
        name: nginx-dev-container
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dev-service
  labels:
    run: nginx-dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: nginx-dev
