foo-corp/namespaces/dev/deny_nw_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-deny-all
spec:
  podSelector:
  matchLabels:
    run: nginx-dev
  ingress: []
